--- a/styles/base/variables.css
+++ b/styles/base/variables.css
@@ -8,6 +8,7 @@
     --background-dark: #ffffff;
     --text-primary: #0f172a;
     --text-secondary: #64748b;
+    --bckground-logo: rgba(48, 125, 232, 0.1);
     
     /* Colores de marca */
     --btnPrimary-backgr: #307de8;
