--- a/styles/pages/home.css
+++ b/styles/pages/home.css
@@ -5,13 +5,15 @@
 /* Hero Section */
 .hero {
     position: relative;
-    background-image: linear-gradient(
-        to bottom,
-        rgba(245, 240, 230, 0.95) 0%,
-        rgba(245, 240, 230, 0.75) 100%
-    ), url("../../res/manos ceramista.jpg");
+        background-image: linear-gradient(
+            90deg,
+            rgba(245, 240, 230, 0.9) 0%,
+            rgba(245, 240, 230, 0.6) 50%,
+            transparent 100%
+        ), url("../../res/pack-tazas.jpg");
+
     background-size: cover;
-    background-position: center;
+    background-position: center 70%;
     background-repeat: no-repeat;
     background-color: var(--earth-100);
     width: 100%;
@@ -311,7 +313,7 @@
             rgba(245, 240, 230, 0.9) 0%,
             rgba(245, 240, 230, 0.6) 50%,
             transparent 100%
-        ), url("../../res/manos ceramista.jpg");
+        ), url("../../res/pack-tazas.jpg");
     }
 
     .hero--content {
